cmake_minimum_required(VERSION 3.0.0)
project(libQFC VERSION 0.1.0 LANGUAGES C)

include(CTest)
enable_testing()

set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
set(THREADS_PREFER_PTHREAD_FLAG TRUE)
find_package(Threads REQUIRED)
add_executable(libQFC QFC.c QFC.h)

target_link_libraries(libQFC Threads::Threads avcodec avformat avutil swscale)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
